# learn_axum

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
dockerfiles/: docker-compose-for-dev.yaml  postgres_for_dev.yaml
documents/: rust_axum_full_course.md  rust_axum_production.md  rust_notes.md
examples/: gen_key.rs
sql/dev_inital/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: mod.rs  pwd.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: auth_middleware.rs  auth_middleware_failed.rs  auth_middleware_succeed.rs  crud_tickets.rs  hello_handler.rs  quick_dev.rs  routes_login.rs  static_handler.rs
