[package]
name = "learn_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
axum-macros = { version = "0.4.2" }
axum-server = { version = "0.7.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = { version = "0.10" }
lazy-regex = "3.3"
async-trait = "0.1"
strum_macros = "0.26"
uuid = { version = "1", features = ["v4", "fast-rng"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "time",
] }
# -- Tracing 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1"
httpc-test = { version = "0.1.1" }
serial_test = "3"
